# rwhile-B-haskell

./: .gitignore  README.md  rwhile.cabal
examples/: 000.rcore_val  001.rcore_val  010.rcore_val  add.rwhilewm  list_abc.val  map_inc.rwhile  nil^10.val  piorder.rwhile  piorder_input01.rcore_val  piorder_input02.rcore_val  piorder_input03.rcore_val  piorder_input04.rcore_val  reverse.rwhile  reverse_and_list_abc.val  rint.rwhile  t00.rcore  t02.rcore  t03.rcore  t04.rcore  t05.rcore  t06.rcore  t08.rcore  t09.rcore  t10.rwhilerm  true.val  unary2binary.rwhilewm
src/: Ast.hs  Eval.hs  Invert.hs  Main.hs  Makefile  Parser.hs  ToData.hs  Trans.hs
