name:                rwhile
version:             0.1.0.0
synopsis:            R-WHILE
-- description:         
homepage:            https://github.com/tyoko-dev/rwhile-B-haskell
license:             AGPL-3
license-file:        LICENSE
author:              tyoko-dev
maintainer:          tyoko-dev@users.noreply.github.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable rwhile
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, pretty >=1.1 && <1.2, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010